[package]
name = "space_invader"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
